--- a/index.html
+++ b/index.html
@@ -2,6 +2,24 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+  (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+  m[i].l=1*new Date();
+  for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+  k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+  (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+  ym(94106236, "init", {
+       clickmap:true,
+       trackLinks:true,
+       accurateTrackBounce:true
+  });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/94106236" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
+
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -41,9 +59,10 @@
 
         <div class="hero__links"> 
           <a class="hero__tg" href="https://t.me/cchhuubboo" target="_blank"><img src="11.png" alt="11.png"><i class=""></i></a>
-          <a class="hero__google" href="https://mail.yandex.ru/?uid=1492864319#tabs/relevant" target="_blank"><img src="55.png" alt="55.png"><i class=""></i></a>
-        </div>
+          <a class="hero__google" href="https://mail.yandex.ru/compose?mailto=boris.chymichev@gmail.com" target="_blank"><img src="55.png" alt="55.png"><i class=""></i></a>
+          
 
+        </div>
 
       </div>
 
@@ -53,7 +72,10 @@
 
     </div>
 
+
   </div>
+  
+
 
 
 </body>
