--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Визитка</title>
+  <title>Бо</title>
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
@@ -32,8 +32,8 @@
 
   <link rel="stylesheet" href="style.css">
   <link rel="apple-touch-icon" sizes="152x152" href="https://www.flaticon.com/ru/free-icon/google-plus_2111477?term=google&page=1&position=40&origin=search&related_id=2111477">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-40x40.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicons/fav.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicons/fav.png">
   <link rel="manifest" href="favicons/site.webmanifest.html">
   <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
