--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
   <link rel="stylesheet" href="style.css">
   <link rel="apple-touch-icon" sizes="152x152" href="https://www.flaticon.com/ru/free-icon/google-plus_2111477?term=google&page=1&position=40&origin=search&related_id=2111477">
-  <link rel="icon" type="image/png" sizes="32x32" src="fav.png">
-  <link rel="icon" type="image/png" sizes="16x16" src="fav.png">
+<link rel="icon" type="image/png" sizes="32x32" href = "fav.png">
+  <link rel="icon" type="image/png" sizes="16x16" href = "fav.png">
   <link rel="manifest" href="favicons/site.webmanifest.html">
   <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
