--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h1 class="hero__title">QA Engineer</h1>
         <h2 class="hero__subtitle">Борис Чумичев</h2>
         <p class="hero__description">
-          Хэй, я провожу ручное тестирование программных компонентов, ищу и нахожу баги 
+          Хэй, я провожу ручное тестирование программных компонентов, ищу и нахожу баги. А еще я круто разбираюсь во многих инструментах тестирования
         </p>
 
 
